--- a/GameOfGoogol/index.html
+++ b/GameOfGoogol/index.html
@@ -238,7 +238,7 @@
                 <p>
                     This is because, if every value would be equally likely, the vast majority of values would be upwards
                     of 10<sup>97</sup>. With the method I use, values seem more equally distributed and I find it more
-                    suitable for a game. It's about having fun, not calculation numbers in the most accurate way there
+                    suitable for a game. It's about having fun, not calculating numbers in the most accurate way there
                     is. If you want, you can fork this game and make it so the values are all equally likely. I mean
                     that. Go for it!
                 </p>
