--- a/mine/index.html
+++ b/mine/index.html
@@ -159,10 +159,10 @@
         },
         methods: {
             formatEuros(value) {
-                return new Intl.NumberFormat('en-US', { style: 'currency', currency: 'EUR' }).format(value)
+                return new Intl.NumberFormat('de-DE', { style: 'currency', currency: 'EUR' }).format(value)
             },
             formatNumber(value) {
-                return new Intl.NumberFormat('en-US', {}).format(value)
+                return new Intl.NumberFormat('de-DE', {}).format(value)
             },
         }
     })
