--- a/mine/index.html
+++ b/mine/index.html
@@ -8,8 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
-        .table-spacer > td {
-            padding-bottom: 30px;
+        .table > tbody > tr > td {
+            padding-top: 1px;
+            padding-bottom: 1px;
+        }
+        .table > tbody > tr.table-spacer > td {
+            padding-bottom: 10px;
         }
     </style>
 </head>
@@ -21,12 +25,12 @@
                 <table class="table table-striped table-borderless">
                     <tbody>
                     <tr>
-                        <td>Rechner</td>
-                        <td><input class="form-control" v-model="rigs" type=number></td>
+                        <td>Anzahl Rechner</td>
+                        <td><input class="form-control form-control-sm" v-model="rigs" type=number></td>
                     </tr>
                     <tr>
                         <td>Karten/Rechner</td>
-                        <td><input class="form-control" v-model="cardsPerRig" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="cardsPerRig" type=number></td>
                     </tr>
                     <tr class="table-spacer">
                         <td>Gesamtzahl Karten</td>
@@ -34,15 +38,15 @@
                     </tr>
                     <tr>
                         <td>Kosten/Karte</td>
-                        <td><input class="form-control" v-model="costPerCard" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="costPerCard" type=number></td>
                     </tr>
                     <tr>
                         <td>MHs/s/Karte</td>
-                        <td><input class="form-control" v-model="mhs" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="mhs" type=number></td>
                     </tr>
                     <tr class="table-spacer">
                         <td>Watt/Karte</td>
-                        <td><input class="form-control" v-model="watts" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="watts" type=number></td>
                     </tr>
                     <tr>
                         <td>Watt/Rechner</td>
@@ -54,11 +58,11 @@
                     </tr>
                     <tr>
                         <td>Monatliche €/MH/s</td>
-                        <td><input class="form-control" v-model="monthlyMHPrice" step="0.01" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="monthlyMHPrice" step="0.01" type=number></td>
                     </tr>
                     <tr class="table-spacer">
                         <td>Kosten/kWh</td>
-                        <td><input class="form-control" v-model="kWHPrice" step="0.01" type=number></td>
+                        <td><input class="form-control form-control-sm" v-model="kWHPrice" step="0.01" type=number></td>
                     </tr>
                     <tr>
                         <td>kWh/Jahr</td>
